@@ -3,7 +3,6 @@ package edu.colorado.phet.energyskatepark.basics;
 
 import java.awt.Color;
 import java.awt.Paint;
-import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.common.phetcommon.model.property.ChangeObserver;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
@@ -40,7 +39,7 @@ public class TrackFrictionSlider extends PNode {
 
         // Create and add the slider node.
         final HSliderNode sliderNode = new HSliderNode( trackFrictionSlider, 0, FRICTION_MAX, 90, 5, frictionAmount, module.frictionEnabled ) {
-            @Override protected Paint getTrackFillPaint( Rectangle2D trackRect ) {
+            @Override protected Paint getTrackFillPaint( double trackWidth, double trackHeight ) {
                 // Override the gradient and fill with white.  The gradient
                 // just looked weird.
                 return Color.WHITE;
