@@ -1,3 +1,4 @@
+> Fixed: Double Well (roller coaster) in the Tracks menu is loading without roller coaster mode
 # 2.10.00 (61021) Feb 4, 2012
 # 2.09.05 (61017) Feb 3, 2012
 > Nudge up tracks by 1E-2 meters so that the potential energy won't go negative at the bottom of a user-created well
